# lectural

./: .gitignore  .lectural-gjc-goal.tmp.json  .lectural-qg-g001.tmp.json  .lectural-qg-g002.tmp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/lectural/: SKILL.md
.claude/skills/lectural/references/: pipeline.md  summary_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  release.yml  size-label.yml
.gjc/specs/: deep-interview-index.jsonl  deep-interview-lectural-next-direction.md  deep-interview-lectural-notes-redesign.md  deep-interview-lectural-quality.md  deep-interview-lectural-repo-operations.md  deep-interview-lectural.md  deep-interview-readme-plugin.md
.gjc/state/: audit.jsonl  deep-interview-state.json  ralplan-state.json  skill-active-state.json
.gjc/state/active/: deep-interview.json  ralplan.json  ultragoal.json
.gjc/ultragoal/: _status.json  brief-readme-plugin.md  brief.md  goals.json  ledger.jsonl
artifacts/: g001-pytest.txt  g001-redteam.txt  g002-pytest.txt  g003-coverage.json  g003-hook-smoke.txt  g003-perf_metrics.json  g003-pytest.txt  v011-qa-changelog-adversarial.json  v011-qa-changelog-adversarial.txt  v011-qa-doctor-json.txt  v011-qa-offline-suite.txt  v011-qa-plugin-validate.txt  v011-qa-surface-commands.txt  v011-qa-version-surface-redteam.txt  v011-slop-report.md  v012-plugin-load-test.md  wu2-hook-smoke.txt  wu2-redteam.txt  wu3-contract.txt  wu3-packaging.txt  wu4-hook-smoke.txt  wu4-redteam.txt  wu6-focused-tests.txt  wu6-real-video-evidence.json  wu6-rubric.json
commands/: notes.md  setup.md
docs/: ac_verification.md  perf_smoke_2026-06-13.md  synthesis_contract.md  track2_verification_2026-06-14.md  wu6_verification_2026-06-14.md
hooks/: hooks.json
lectural/: __init__.py  acquisition.py  cli.py  config.py  coverage.py  deps.py  doctor.py  notes_contract.py  ocr.py  runstate.py  speech.py  synthesis.py  vad.py  visual.py
scripts/: changelog_notes.py  completeness_hook.py  perf_smoke.py
skills/lectural/: SKILL.md
skills/lectural/references/: pipeline.md  summary_prompt.md
tests/: test_acquisition.py  test_changelog_notes.py  test_cli.py  test_coverage.py  test_dedup.py  test_deps.py  test_doctor.py  test_hook.py  test_notes.py  test_ocr.py  test_perf_smoke.py  test_redteam_cli_hook.py  test_redteam_core.py  test_redteam_notes.py  test_redteam_notes_contract.py  test_redteam_packaging.py  test_redteam_readme.py  test_redteam_synthesis.py  test_ssim.py  test_summary_anchors.py  test_vad.py  test_version_changelog.py
(+24 files in other folders)
